--- a/templates/pages/all.html
+++ b/templates/pages/all.html
@@ -1,14 +1,14 @@
 {% extends "til_base.html" %}
 
-{% block title %}Simon Willison: all TILs{% endblock %}
+{% block title %}Stefan Zweig: all TILs{% endblock %}
 
 {% block body %}
-<h1>Simon Willison: all TILs</h1>
+<h1>Stefan Zweig: all TILs</h1>
 
-{% for row in sql("select topic from til group by topic order by max(created_utc) desc", database="tils") %}
+{% for row in sql("select topic from til group by topic order by max(created_utc) desc", database="scratch") %}
     <h2>{{ row.topic }}</h2>
     <ul>
-        {% for til in sql("select * from til where topic = :topic order by created_utc desc", {"topic": row.topic}, database="tils") %}
+        {% for til in sql("select * from til where topic = :topic order by created_utc desc", {"topic": row.topic}, database="scratch") %}
             <li><a href="/{{ til.topic }}/{{ til.slug }}">{{ til.title }}</a> - {{ til.created[:10] }}</li>
         {% endfor %}
     </ul>
