--- a/templates/pages/{topic}/{slug}.html
+++ b/templates/pages/{topic}/{slug}.html
@@ -2,28 +2,28 @@
 
 {% set tils = sql("""
     select * from til where path = :topic || '_' || :slug || '.md'
-""", {"topic": topic, "slug": slug}, database="tils")
+""", {"topic": topic, "slug": slug}, database="scratch")
 %}
 {% set til = tils[0] %}
 {% if not tils %}
     {% set raised = raise_404("TIL not found") %}
 {% endif %}
 
-{% block title %}{{ til.title }} | Simon Willison’s TILs{% endblock %}
+{% block title %}{{ til.title }} | Stefan Zweig’s TILs{% endblock %}
 
 {% block extra_head %}
 <link rel="stylesheet" href="/static/github-light.css">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:creator" content="@simonw">
+<meta name="twitter:creator" content="@stefanzweig">
 <meta name="twitter:title" content="{{ til.title }}">
 <meta name="twitter:description" content="{{ til.body }}">
-<meta name="twitter:image" content="https://til.simonwillison.net/-/media/screenshot/{{ til.path }}">
+<meta name="twitter:image" content="https://scratch.zweig.net/-/media/screenshot/{{ til.path }}">
 <meta name="twitter:image:alt" content="Screenshot of this article">
-<meta property="og:url" content="https://til.simonwillison.net/til/til/{{ til.path }}">
+<meta property="og:url" content="https://scratch.zweig.net/til/til/{{ til.path }}">
 <meta property="og:type" content="article">
 <meta property="og:title" content="{{ til.title }}">
 <meta property="og:description" content="{{ til.body }}">
-<meta property="og:image" content="https://til.simonwillison.net/-/media/screenshot/{{ til.path }}">
+<meta property="og:image" content="https://scratch.zweig.net/-/media/screenshot/{{ til.path }}">
 <meta property="og:image:alt" content="Screenshot of this article">
 <meta property="og:image:width" content="800">
 <meta property="og:image:height" content="400">
@@ -44,5 +44,5 @@
   </ul>
 {% endif %}
 
-<p class="created">Created {{ til.created }}{% if til.created != til.updated %}, updated {{ til.updated }} &middot; <a href="{{ til.url|replace("https://github.com/simonw/til/blob/", "https://github.com/simonw/til/commits/") }}">History</a>{% endif %} &middot; <a href="{{ til.url }}">Edit</a></p>
+<p class="created">Created {{ til.created }}{% if til.created != til.updated %}, updated {{ til.updated }} &middot; <a href="{{ til.url|replace("https://github.com/stefanzweig/snatch/blob/", "https://github.com/stefanzweig/snatch/commits/") }}">History</a>{% endif %} &middot; <a href="{{ til.url }}">Edit</a></p>
 {% endblock %}
