--- a/templates/row.html
+++ b/templates/row.html
@@ -1,20 +1,20 @@
 {% extends "til_base.html" %}
 
-{% block title %}{% set til = display_rows[0] %}{{ til.title }} | Simon Willison’s TILs{% endblock %}
+{% block title %}{% set til = display_rows[0] %}{{ til.title }} | Stefan Zweig’s TILs{% endblock %}
 
 {% block extra_head %}{% set til = display_rows[0] %}
 <link rel="stylesheet" href="/static/github-light.css">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:creator" content="@simonw">
+<meta name="twitter:creator" content="@stefanzweig">
 <meta name="twitter:title" content="{{ til.title }}">
 <meta name="twitter:description" content="{{ til.body }}">
-<meta name="twitter:image" content="https://til.simonwillison.net/-/media/screenshot/{{ til.path }}">
+<meta name="twitter:image" content="https://scratch.zweig.net/-/media/screenshot/{{ til.path }}">
 <meta name="twitter:image:alt" content="Screenshot of this article">
-<meta property="og:url" content="https://til.simonwillison.net/til/til/{{ til.path }}">
+<meta property="og:url" content="https://scratch.zweig.net/til/til/{{ til.path }}">
 <meta property="og:type" content="article">
 <meta property="og:title" content="{{ til.title }}">
 <meta property="og:description" content="{{ til.body }}">
-<meta property="og:image" content="https://til.simonwillison.net/-/media/screenshot/{{ til.path }}">
+<meta property="og:image" content="https://scratch.zweig.net/-/media/screenshot/{{ til.path }}">
 <meta property="og:image:alt" content="Screenshot of this article">
 <meta property="og:image:width" content="800">
 <meta property="og:image:height" content="400">
@@ -25,5 +25,5 @@
 
 {{ til.html|safe }}
 
-<p class="created">Created {{ til.created }}{% if til.created != til.updated %}, updated {{ til.updated }} &middot; <a href="{{ til.url|replace("https://github.com/simonw/til/blob/", "https://github.com/simonw/til/commits/") }}">History</a>{% endif %} &middot; <a href="{{ til.url }}">Edit</a></p>
+<p class="created">Created {{ til.created }}{% if til.created != til.updated %}, updated {{ til.updated }} &middot; <a href="{{ til.url|replace("https://github.com/stefanzweig/snatch/blob/", "https://github.com/stefanzweig/snatch/commits/") }}">History</a>{% endif %} &middot; <a href="{{ til.url }}">Edit</a></p>
 {% endblock %}
