--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@ h1 {
 {% block body %}
 {% set til_count = sql("select count(*) from TIL", database="scratch")[0][0] %}
 <h1>stefanzweig: TIL</h1>
-<p>Things I've learned, collected in <a href="https://github.com/stefanzweig/scratch">stefanzweig/scratch</a>. You may also enjoy <a href="https://stefanzweigillison.net/">my blog</a>.</p>
+<p>Things I've learned, collected in <a href="https://github.com/stefanzweig/scratch">stefanzweig/scratch</a>. You may also enjoy <a href="https://zweig.net/">my blog</a>.</p>
 
 <p><a style="text-decoration: none" href="/tils/feed.atom" title="Atom feed"><svg xmlns="http://www.w3.org/2000/svg" width="14px" height="14px" viewBox="0 0 256 256">
     <defs>
