--- a/templates/row.html
+++ b/templates/row.html
@@ -8,13 +8,13 @@
 <meta name="twitter:creator" content="@stefanzweig">
 <meta name="twitter:title" content="{{ til.title }}">
 <meta name="twitter:description" content="{{ til.body }}">
-<meta name="twitter:image" content="https://scratch.zweig.net/-/media/screenshot/{{ til.path }}">
+<meta name="twitter:image" content="https://scratch-gamma.vercel.app/-/media/screenshot/{{ til.path }}">
 <meta name="twitter:image:alt" content="Screenshot of this article">
-<meta property="og:url" content="https://scratch.zweig.net/til/til/{{ til.path }}">
+<meta property="og:url" content="https://scratch-gamma.vercel.app/til/til/{{ til.path }}">
 <meta property="og:type" content="article">
 <meta property="og:title" content="{{ til.title }}">
 <meta property="og:description" content="{{ til.body }}">
-<meta property="og:image" content="https://scratch.zweig.net/-/media/screenshot/{{ til.path }}">
+<meta property="og:image" content="https://scratch-gamma.vercel.app/-/media/screenshot/{{ til.path }}">
 <meta property="og:image:alt" content="Screenshot of this article">
 <meta property="og:image:width" content="800">
 <meta property="og:image:height" content="400">
