--- a/templates/til_base.html
+++ b/templates/til_base.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{% block title %}{% endblock %}</title>
-<script defer data-domain="snatch.zweig.net" src="https://plausible.io/js/plausible.js"></script>
+<script defer data-domain="scratch-gamma.vercel.app" src="https://plausible.io/js/plausible.js"></script>
 {% block extra_head %}{% endblock %}
 <style>
 body {
