--- a/templates/pages/{topic}/{slug}.html
+++ b/templates/pages/{topic}/{slug}.html
@@ -17,13 +17,13 @@
 <meta name="twitter:creator" content="@stefanzweig">
 <meta name="twitter:title" content="{{ til.title }}">
 <meta name="twitter:description" content="{{ til.body }}">
-<meta name="twitter:image" content="https://tils.liuhaijiang.com/-/media/screenshot/{{ til.path }}">
+<meta name="twitter:image" content="https://s3.amazonaws.com/tils.liuhaijiang.com/{{ til.shot_hash }}.jpg">
 <meta name="twitter:image:alt" content="Screenshot of this article">
-<meta property="og:url" content="https://tils.liuhaijiang.com/til/til/{{ til.path }}">
+<meta property="og:url" content="https://tils.liuhaijiang.com/{{ til.topic }}/{{ til.slug }}">
 <meta property="og:type" content="article">
 <meta property="og:title" content="{{ til.title }}">
 <meta property="og:description" content="{{ til.body }}">
-<meta property="og:image" content="https://tils.liuhaijiang.com/-/media/screenshot/{{ til.path }}">
+<meta property="og:image" content="https://s3.amazonaws.com/tils.liuhaijiang.com/{{ til.shot_hash }}.jpg">
 <meta property="og:image:alt" content="Screenshot of this article">
 <meta property="og:image:width" content="800">
 <meta property="og:image:height" content="400">
