--- a/templates/pages/{topic}/{slug}.html
+++ b/templates/pages/{topic}/{slug}.html
@@ -19,7 +19,7 @@
 <meta name="twitter:description" content="{{ til.body }}">
 <meta name="twitter:image" content="https://s3.amazonaws.com/tils.liuhaijiang.com/{{ til.shot_hash }}.jpg">
 <meta name="twitter:image:alt" content="Screenshot of this article">
-<meta property="og:url" content="https://tils.liuhaijiang.com/{{ til.topic }}/{{ til.slug }}">
+<meta property="og:url" content="https://til.liuhaijiang.com/{{ til.topic }}/{{ til.slug }}">
 <meta property="og:type" content="article">
 <meta property="og:title" content="{{ til.title }}">
 <meta property="og:description" content="{{ til.body }}">
