--- a/templates/pages/{topic}/{slug}.html
+++ b/templates/pages/{topic}/{slug}.html
@@ -9,7 +9,7 @@
     {% set raised = raise_404("TIL not found") %}
 {% endif %}
 
-{% block title %}{{ til.title }} | Stefan Zweig’s TILs{% endblock %}
+{% block title %}{{ til.title }} | Haijiang’s TILs{% endblock %}
 
 {% block extra_head %}
 <link rel="stylesheet" href="/static/github-light.css">
