--- a/templates/til_base.html
+++ b/templates/til_base.html
@@ -88,7 +88,7 @@ blockquote {
 </head>
 <body>
 <nav>
-    <p><a href="/">Stefan Zweig’s TILs</a></p>
+    <p><a href="/">Haijiang’s TILs</a></p>
 </nav>
 <section class="body">
 {% block body %}{% endblock %}
