--- a/templates/pages/all.html
+++ b/templates/pages/all.html
@@ -1,9 +1,9 @@
 {% extends "til_base.html" %}
 
-{% block title %}Stefan Zweig: all TILs{% endblock %}
+{% block title %}Haijiang: all TILs{% endblock %}
 
 {% block body %}
-<h1>Stefan Zweig: all TILs</h1>
+<h1>Haijiang: all TILs</h1>
 
 {% for row in sql("select topic from til group by topic order by max(created_utc) desc", database="scratch") %}
     <h2>{{ row.topic }}</h2>
